<resources>
    <string name="app_name">SCINO Books</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="add">Add</string>
    <string name="add_book">Add book</string>
    <string name="add_category">Add category</string>
    <string name="book_name">Name</string>
    <string name="book_description">Description</string>
    <string name="book_author">Author</string>
    <string name="book_category">Category</string>
    <string name="book_read">Read</string>
    <string name="category_name">Name</string>
    <string name="category_description">Description</string>
    <string name="cancel_btn">Cancel</string>
    <string name="ok_btn">OK</string>
    <string name="no_category">No category</string>
    <string name="no_category_description">Books without category</string>
    <string name="category_str">Category</string>
    <string name="all">All</string>
    <string name="all_description">List with all books</string>
    <string name="exit">Exit SCINO Books</string>
    <string name="exit_message">Do you want to exit SCINO Books?</string>
    <string name="delete_category_message">Do you want to delete this category?</string>
    <string name="delete_category">Delete category</string>
    <string name="delete_book_message">Do you want to delete this book?</string>
    <string name="delete_book">Delete book</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="sort">Sort books</string>
    <string name="sort_by_name">By name</string>
    <string name="sort_by_author">By author</string>
    <string name="show_books">Show books</string>
    <string name="show_all_books">All books</string>
    <string name="show_read">Read books</string>
    <string name="show_not_read">Not read books</string>
</resources>
