<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <group
        android:id="@+id/books_buttons"
        android:visible="false">
        <item
            android:id="@+id/action_edit_book"
            android:orderInCategory="1"
            app:showAsAction="always"
            android:icon="@android:drawable/ic_menu_edit"
            android:title="@string/edit">
        </item>
        <item
            android:id="@+id/action_delete_book"
            android:orderInCategory="1"
            android:icon="@android:drawable/ic_delete"
            app:showAsAction="always"
            android:title="@string/delete">
        </item>
    </group>


    <group
        android:id="@+id/sort_and_show_books"
        android:visible="false">
        <item
            android:orderInCategory="1"
            app:showAsAction="never"
            android:id="@+id/sort"
            android:title="@string/sort">
            <menu>
                <item
                    android:id="@+id/sort_by_name"
                    android:title="@string/sort_by_name">
                </item>
                <item
                    android:id="@+id/sort_by_author"
                    android:title="@string/sort_by_author">
                </item>
            </menu>
        </item>
        <item
            android:id="@+id/show_books"
            android:orderInCategory="1"
            app:showAsAction="never"
            android:title="@string/show_books">
            <menu>
                <item
                    android:id="@+id/action_show_read_books"
                    android:orderInCategory="1"
                    app:showAsAction="never"
                    android:title="@string/show_read">
                </item>
                <item
                    android:id="@+id/action_show_not_read_books"
                    android:orderInCategory="1"
                    app:showAsAction="never"
                    android:title="@string/show_not_read">
                </item>
                <item
                    android:id="@+id/action_show_all_books"
                    android:orderInCategory="1"
                    app:showAsAction="never"
                    android:title="@string/show_all_books">
                </item>
            </menu>
        </item>

    </group>
    <group
        android:id="@+id/category_buttons"
        android:visible="false">

        <item
            android:id="@+id/action_edit_category"
            android:orderInCategory="1"
            app:showAsAction="always"
            android:icon="@android:drawable/ic_menu_edit"
            android:title="@string/edit">
        </item>
        <item
            android:id="@+id/action_delete_category"
            android:orderInCategory="1"
            app:showAsAction="always"
            android:icon="@android:drawable/ic_delete"
            android:title="@string/delete">
        </item>
    </group>
    <item
        android:visible="true"
        android:id="@+id/add"
        android:icon="@android:drawable/ic_menu_add"
        app:showAsAction="always"
        android:enabled="true"
        android:title="@string/add">
        <menu>
    <item android:id="@+id/action_add_book"
        android:title="@string/add_book"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_add_category"
        android:title="@string/add_category"
        android:orderInCategory="100"
        app:showAsAction="never" />
        </menu>
    </item>
</menu>
